# flake8-breakpoint

./: .bumpversion.cfg  README.md  makefile  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
flake8_breakpoint/: errors.py  plugin.py  visitors.py
tests/: test_flake8_breakpoint.py
