[tool.poetry]
name = "flake8-breakpoint"
version = "1.1.0"
description = "Flake8 plugin that check forgotten breakpoints"
authors = ["Evgeniy Afonasev <ea.afonasev@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/afonasev/flake8-breakpoint"
homepage = "https://pypi.org/project/flake8-breakpoint"
keywords = ['flake8', 'linter', 'breakpoint', 'debug']

[tool.poetry.plugins."flake8.extension"]
B60 = 'flake8_breakpoint.plugin:BreakpointPlugin'

[tool.poetry.dependencies]
python = "^3.6"
flake8-plugin-utils = "^1.0"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
bumpversion = "^0.5.3"
flake8-awesome = "^1.0"
mypy = "^0.660.0"
pylint = "^2.2"
pytest = "^3.0"
pytest-cov = "^2.6"
pytest-deadfixtures = "^2.1"
pytest-mock = "^1.10"
unify = "^0.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
