[tool.poetry]
name = "flake8-breakpoint"
version = "1.1.0"
description = "Flake8 plugin that check forgotten breakpoints"
authors = ["Evgeniy Afonasev <ea.afonasev@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/afonasev/flake8-breakpoint"
homepage = "https://pypi.org/project/flake8-breakpoint"
keywords = ['flake8', 'linter', 'breakpoint', 'debug']

[tool.poetry.plugins."flake8.extension"]
B60 = 'flake8_breakpoint.plugin:BreakpointPlugin'

[tool.poetry.dependencies]
python = "^3.6"
flake8-plugin-utils = "^1.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0",allows-prereleases = true}
bumpversion = "^0.6.0"
flake8-awesome = "^1.2"
mypy = "^0.770"
pylint = "^2.5"
pytest = "^5.4"
pytest-cov = "^2.8"
pytest-deadfixtures = "^2.2"
pytest-mock = "^3.1"
unify = "^0.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
